chore: remove modal margin to align correctly

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -115,7 +115,7 @@ main {
 	}
 
 	&__title {
-		margin: 0 0 40px;
+		margin: 0;
 		font-size: 2.5rem;
 		letter-spacing: 2.4px;
 		color: #000;
